--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/pledge-2015-compiled.css">
 	<title>KBIA Pledge Page Preview</title>
 </head>
 <body>
 	<div class="container">
-		
+		<form role="form">
+			<div class="pledge-amount">
+				<h1>Become a Sustaining Member.</h1>
+				<div class="redirect">...or <a href="#">click here to make a single contribution</a></div>
+				<div class="form-group">
+					<div class="radio"><label><input type="radio" name="pledge-amount">$ 3.00 /month</label></div>
+					<div class="radio"><label><input type="radio" name="pledge-amount">$ 7.50 /month</label></div>
+					<div class="radio"><label><input type="radio" name="pledge-amount">$ 5.00 / month</label></div>
+					<div class="radio"><label><input type="radio" name="pledge-amount">$ 10.00 / month</label></div>
+					<div class="radio"><label><input type="radio" name="pledge-amount">$ 15.00 /month</label></div>
+					<div class="radio"><label><input type="radio" name="pledge-amount">$ 20.00 / month</label></div>
+					<div class="radio"><label><input type="radio" name="pledge-amount">$ 50.00 / month</label></div>
+					<div class="radio"><label><input type="radio" name="pledge-amount">$ 100.00 / month</label></div>
+					<div class="radio"><label><input type="radio" name="pledge-amount">Other Amount: </label></div>
+				</div>
+			</div>
+			<div id="contact-information">
+				<div class="form-group">
+					<label for="name">First and Last Name</label>
+					<input type="text" class="form-control" id="name">
+				</div>
+			</div>
+		</form>
 	</div>
 </body>
 </html>
